# Xiaoyi-develop

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py  interactive_chat.py
skills/XiaoYi/: DISCLAIMER.md  README.md  SKILL.md
skills/XiaoYi/examples/: basic_query.py  multi_turn.py  thinking_chain.py
skills/XiaoYi/prompts/: query.md
skills/XiaoYi/scripts/: query_xiaoyi.py
skills/XiaoYi/templates/: response_template.md
src/xiaoyi_sdk/: __init__.py  config.py  exceptions.py
src/xiaoyi_sdk/api/: client.py  session.py
src/xiaoyi_sdk/models/: message.py  request.py  response.py
src/xiaoyi_sdk/utils/: helpers.py
tests/: __init__.py  test_client.py  test_models.py  test_session.py
